--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<p>
-Welcome to unmu's personal website.
-</p>
-<button>Button</button>
+<!DOCTYPE html>
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8" />
+    <title></title>
+</head>
+<body>
+    <p>
+    Welcome to unmu's personal website.
+    </p>
+    <button>Button</button>
+</body>
+</html>
