--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <p>
     Welcome to unmu's personal website.
     </p>
-    <button>Button</button>
+    <button onclick="location='/html/one.html'">Button</button>
 </body>
 </html>
