--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     Welcome to unmu's personal website.
     </p>
     <button onclick="location='/html/one.html'">Button</button>
+    <a href="/html/one.html">One</a>
 </body>
 </html>
