--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -6,10 +6,10 @@
     <title></title>
 </head>
 <body>
-    <p>
-    Welcome to unmu's personal website.
-    </p>
-    <button onclick="location='/html/one.html'">Button</button>
-    <a href="/html/one.html">One</a>
+    <div style="margin: 0 auto; width: 1000px">
+        <h3>github pages</h3>
+        <a href="./html/one.html">one</a>
+        <button onclick="location='./html/one.html'">Button</button>
+    </div>
 </body>
 </html>
